--- a/style.css
+++ b/style.css
@@ -1,3 +1,37 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 body{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    min-height: 100vh;
 }
+
+nav,header,footer{
+    background-color: #1f2937;
+}
+
+.logo,h1{
+    color: #f9faf8;
+    font-weight: 900;
+}
+
+.logo{
+    font-size: 24px;
+}
+
+h1{
+    font-size: 48px
+}
+
+p,a{
+    font-size: 18px;
+    color: #e5e7eb;
+    text-decoration: none;
+}
+
+ul{
+    list-style-type: none;
+}
+
