--- a/style.css
+++ b/style.css
@@ -4,8 +4,9 @@
     box-sizing: border-box;
 }
 body{
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family:'Roboto','Open Sans',  sans-serif;
     min-height: 100vh;
+    line-height: 1.5;
 }
 
 nav,header,footer{
@@ -22,7 +23,8 @@ nav,header,footer{
 }
 
 h1{
-    font-size: 48px
+    font-size: 48px;
+    line-height: 1.2;
 }
 
 .title{
@@ -43,20 +45,39 @@ h1{
 button{
     background-color: #3882f6;
     color: #f9faf8;
+    padding: 8px 32px;
+    border-radius: 8px;
+    font-size: 18px;
+    font-weight: 700;
+    border: none;
+    margin-top:16px;
 }
 
 ul{
     list-style-type: none;
     display: flex;
-    gap: 8px;
+    gap: 16px;
+    align-items: center;
 }
 
 .container{
     max-width: 1100px;
     margin: 0 auto;
-    padding: 10px 30px;
+    padding: 16px 30px;
 }
 nav .container{
     display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 
+header .container{
+    padding: 128px 30px;
+    display: flex;
+}
+
+.big-image{
+    width: 900px;
+    height: 270px;
+    margin-left: 64px;
 }
