--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ header .container{
 .info .container{
     display: flex;
     flex-direction: column;
-    
+    padding-bottom: 64px;
 }
 
 .blocks{
@@ -114,4 +114,26 @@ img.image{
 .fact{
     max-width: 200px;
     color: #1f2937;
+}
+
+.quote {
+    background-color: #e5e7eb;
+}
+
+.quote .container{
+    padding:100px
+}
+
+.sentence{
+    font-size: 36px;
+    font-style: italic;
+    font-weight: 300;
+    color: #1f2937;
+}
+
+.quoter{
+    font-size: 24px;
+    font-weight: 700;
+    color: #1f2937;
+    text-align: right;
 }
