--- a/style.css
+++ b/style.css
@@ -137,3 +137,34 @@ img.image{
     color: #1f2937;
     text-align: right;
 }
+
+.signup{
+    padding: 100px;
+}
+
+.signup .container{
+    border-radius: 8px;
+    display: flex;
+    padding: 64px;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.subhead{
+    color: #f9faf8;
+    font-size: 24px;
+    font-weight: 700;
+}
+
+.subtext{
+    color: #e5e7eb;
+    font-size: 18px;
+}
+
+.signup button{
+    border:2px solid #f9faf8;
+}
+
+footer{
+    text-align: center;
+}
